Implement newest swagger API spec
